# ksef-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  flake.nix  shell.nix
.github/workflows/: publish.yml
certgen/: README.en.md  README.md  certgen.rs
docs/: authentication.en.md  authentication.md  batch_session.en.md  batch_session.md  fetching_invoices.en.md  fetching_invoices.md  ksef_certificates.en.md  ksef_certificates.md  ksef_tokens.en.md  ksef_tokens.md  online_session.en.md  online_session.md  peppol.en.md  peppol.md  permissions.en.md  permissions.md  qr.en.md  qr.md  sessions.en.md  sessions.md  upo.en.md  upo.md
src/: lib.rs
src/client/: auth_challenge.rs  auth_token_request.rs  error.rs  get_access_token.rs  get_public_key_certificates.rs  mod.rs  models.rs  new_ksef_token.rs  routes.rs  session.rs  submit_ksef_token_auth_request.rs  submit_xades_auth_request.rs  types.rs
src/client/auth/: auth_challenge.rs  auth_token_request.rs  get_access_token.rs  get_auth_status.rs  get_auth_token_request.rs  ksef_token_auth.rs  mod.rs  xades_auth.rs
src/client/batch_session/: close_batch_session.rs  full_flow.rs  mod.rs  open_batch_session.rs  upload_batch_parts.rs  zip.rs
src/client/fetching_invoices/: fetch_invoice.rs  (+4 more)
tests/: access_token.rs  active_sessions.rs  authentication.rs  authentication_flow.rs  batch_session_tests.rs  fetch_invoices_tests.rs  grant_eu_entity_permissions.rs  grant_person_permissions.rs  grant_subunit_permissions.rs  ksef_certificates_tests.rs  ksef_token.rs  online_session_tests.rs  peppol_tests.rs  permissions_tests.rs  qr_tests.rs  revoke_other_session.rs  sessions_tests.rs  upo_tests.rs
tests/batch_session/: batch_session_flow.rs  mod.rs
tests/common/: mod.rs
tests/fetch_invoices/: fetch_invoice_flow.rs  fetch_invoice_metadata.rs  mod.rs
tests/ksef_certificates/: certificates_limits.rs  enroll_certificate.rs  enrollment_data.rs  enrollment_status.rs  get_certificate_metadata_list.rs  mod.rs  retrieve_certificates.rs  revoke_certificate.rs
tests/online_session/: mod.rs  online_session_flow.rs  open_online_session.rs
tests/peppol/: mod.rs  peppol.rs
tests/permissions/: get_entities_permissions.rs  get_entity_roles.rs  get_eu_entities_permissions.rs  get_personal_permissions.rs  get_persons_permissions.rs  get_subordinate_entities_roles.rs  get_subunits_permissions.rs  grant_authorization_permissions.rs  grant_entity_permissions.rs  grant_eu_entity_permissions.rs  grant_eu_entity_representative_permissions.rs  grant_indirect_entity_permissions.rs  grant_person_permissions.rs  grant_subunit_permissions.rs  mod.rs  revoke_authorizations_permission.rs  revoke_common_permission.rs
tests/qr/: builders.rs  integration.rs  mod.rs
tests/sessions/: active_sessions.rs  mod.rs  revoke_current_session.rs  revoke_other_session.rs  sessions_lifecycle.rs
tests/upo/: invoice_upo_by_ksef_number.rs  invoice_upo_by_reference_number.rs  mod.rs  test_upo_flow.rs
(+65 files in other folders)
