[package]
name = "ksef-client"
version = "0.1.0"
edition = "2024"

authors = ["pengwius <pengwius@protonmail.ch>"]

description = "SDK for integrating with the Polish National e-Invoice System (KSeF)."

license = "MIT"

repository = "https://github.com/pengwius/ksef-client-rust"

keywords = ["ksef", "faktury"]

[dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
openssl = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
regex = "1.10"
base64 = "0.22"
zip = "2.1"

[[bin]]
name = "certgen"
path = "certgen/certgen.rs"
